<resources>
    <string name="app_name">Learning</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Do you want to delete this Card?</string>
    <string name="newCard">New Card Dialog</string>
    <string name="Dialog_add">Add</string>
    <string name="DialogString_TX_Type">Type:</string>
    <string name="DialogString_ET_Type">Visa</string>
    <string name="DialogString_TX_Code">Code:</string>
    <string name="DialogString_ET_Code">4 Last digits XXXX</string>
    <string name="DialogString_TX_Name">Name:</string>
    <string name="DialogString_ET_Name">Blue Card</string>
    <string-array name="credit_card_companies">
        <item>American Express</item>
        <item>Capital One</item>
        <item>Chase</item>
        <item>Citi</item>
        <item>Diners Club</item>
        <item>Discover</item>
        <item>JCB</item>
        <item>Maestro</item>
        <item>Mastercard</item>
        <item>Visa</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
        <item>All</item>
    </string-array>
    <string name="title_activity_card_transactions">CardTransactions</string>
    <string name="DialogString_Title">Add Card</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="app_label">app_label</string>
    <string name="search_hint">Search Card</string>
    <string name="TransactionActivity_TX_Name">Name</string>
</resources>
